using factory instead of repository