@@ -2,8 +2,6 @@ package ru.alexanderhudyakov.lab3.restaurant;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import ru.alexanderhudyakov.lab3.restaurant.repository.DishRepository;
-import ru.alexanderhudyakov.lab3.restaurant.repository.InMemoryDishRepository;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -19,32 +17,33 @@ import java.util.Vector;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class RestaurantTest {
     private final static List<Supplier<Collection<Dish>>> COLLECTIONS;
-    private final static DishRepository REPOSITORY;
-    private final static DishRepository EMPTY_REPOSITORY;
-    private final static DishRepository NON_UNIQUE_REPOSITORY;
+    private final static List<Dish> DISHES;
+    private final static List<Dish> EMPTY_DISHES;
+    private final static List<Dish> NON_UNIQUE_DISHES;
     private static final Set<String> UNIQUE;
     private static final Set<String> MOST_EXPENSIVE;
     private static final int TOTAL_PRICE;
 
     static {
-        REPOSITORY = new InMemoryDishRepository(List.of(
+        DISHES = List.of(
                 new Dish("Суши", Arrays.asList("Рис", "Рыба", "Васаби"), 300),
                 new Dish("Рамен", Arrays.asList("Лапша", "Бульон", "Свинина", "Зеленый лук"), 500),
                 new Dish("Темпура", Arrays.asList("Креветка", "Бобы", "Морковь", "Тесто", "Соус"), 500),
                 new Dish("Такояки", Arrays.asList("Тесто", "Мини осьминог", "Имбирь"), 350),
                 new Dish("Удон", Arrays.asList("Лапша удон", "Бульон", "Нори"), 400),
                 new Dish("Удон", Arrays.asList("Лапша удон", "Бульон", "Нори"), 400)
-        ));
-        EMPTY_REPOSITORY = new InMemoryDishRepository(Collections.emptyList());
-        NON_UNIQUE_REPOSITORY = new InMemoryDishRepository(List.of(
+        );
+        EMPTY_DISHES = Collections.emptyList();
+        NON_UNIQUE_DISHES = List.of(
                 new Dish("Суши", Arrays.asList("Рис", "Рыба", "Васаби"), 300),
                 new Dish("Суши", Arrays.asList("Рис", "Рыба", "Васаби"), 300),
                 new Dish("Суши", Arrays.asList("Рис", "Рыба", "Васаби"), 300)
-        ));
+        );
         UNIQUE = Set.of(
                 "Суши", "Рамен", "Темпура", "Такояки", "Удон"
         );
@@ -70,7 +69,7 @@ class RestaurantTest {
     @DisplayName("Find unique dishes")
     void getUniqueDishes() {
         COLLECTIONS.stream()
-                .map(x -> new Restaurant(x, REPOSITORY))
+                .map(x -> new Restaurant(x, DISHES))
                 .map(Restaurant::getUniqueDishes)
                 .map(x -> x.stream().map(Dish::getName).collect(Collectors.toList()))
                 .forEach(x -> assertTrue(UNIQUE.containsAll(x) && x.size() == UNIQUE.size()));
@@ -80,7 +79,7 @@ class RestaurantTest {
     @DisplayName("Find unique dishes in empty collection")
     void getUniqueDishesInEmptyCollection() {
         COLLECTIONS.stream()
-                .map(x -> new Restaurant(x, EMPTY_REPOSITORY))
+                .map(x -> new Restaurant(x, EMPTY_DISHES))
                 .map(Restaurant::getUniqueDishes)
                 .forEach(x -> assertTrue(x.isEmpty()));
     }
@@ -89,7 +88,7 @@ class RestaurantTest {
     @DisplayName("Find unique dishes in non-unique collection")
     void getUniqueDishesInNonUnique() {
         COLLECTIONS.stream()
-                .map(x -> new Restaurant(x, NON_UNIQUE_REPOSITORY))
+                .map(x -> new Restaurant(x, NON_UNIQUE_DISHES))
                 .map(Restaurant::getUniqueDishes)
                 .map(x -> x.stream().map(Dish::getName).collect(Collectors.toList()))
                 .forEach(x -> assertTrue(x.size() == 1 && x.get(0).equals("Суши")));
@@ -99,7 +98,7 @@ class RestaurantTest {
     @DisplayName("Count total income")
     void getTotalIncome() {
         COLLECTIONS.stream()
-                .map(x -> new Restaurant(x, REPOSITORY))
+                .map(x -> new Restaurant(x, DISHES))
                 .map(Restaurant::getTotalIncome)
                 .forEach(x -> assertEquals(TOTAL_PRICE, x));
     }
@@ -108,7 +107,7 @@ class RestaurantTest {
     @DisplayName("Find total incomes in empty collection")
     void getTotalIncomeInEmptyCollection() {
         COLLECTIONS.stream()
-                .map(x -> new Restaurant(x, EMPTY_REPOSITORY))
+                .map(x -> new Restaurant(x, EMPTY_DISHES))
                 .map(Restaurant::getTotalIncome)
                 .forEach(x -> assertEquals(0, x));
     }
@@ -117,7 +116,7 @@ class RestaurantTest {
     @DisplayName("Find most expensive dishes")
     void getMostExpensiveDishes() {
         COLLECTIONS.stream()
-                .map(x -> new Restaurant(x, REPOSITORY))
+                .map(x -> new Restaurant(x, DISHES))
                 .map(Restaurant::getMostExpensiveDishes)
                 .map(x -> x.stream().map(Dish::getName).collect(Collectors.toList()))
                 .forEach(x -> assertTrue(MOST_EXPENSIVE.containsAll(x) && x.size() == MOST_EXPENSIVE.size()));
@@ -127,7 +126,7 @@ class RestaurantTest {
     @DisplayName("Find most expensive dishes in empty collection")
     void getMostExpensiveDishesInEmptyCollection() {
         COLLECTIONS.stream()
-                .map(x -> new Restaurant(x, EMPTY_REPOSITORY))
+                .map(x -> new Restaurant(x, EMPTY_DISHES))
                 .map(Restaurant::getMostExpensiveDishes)
                 .forEach(x -> assertTrue(x.isEmpty()));
     }
@@ -136,7 +135,7 @@ class RestaurantTest {
     @DisplayName("Find most expensive dishes in non-unique collection")
     void getMostExpensiveDishesInNonUnique() {
         COLLECTIONS.stream()
-                .map(x -> new Restaurant(x, NON_UNIQUE_REPOSITORY))
+                .map(x -> new Restaurant(x, NON_UNIQUE_DISHES))
                 .map(Restaurant::getMostExpensiveDishes)
                 .map(x -> x.stream().map(Dish::getName).collect(Collectors.toList()))
                 .forEach(x -> assertTrue(x.size() == 1 && x.get(0).equals("Суши")));
